--- a/css/j4.1.css
+++ b/css/j4.1.css
@@ -1,3 +1,12 @@
 table {
     margin: auto;
 }
+
+.align-center {
+    text-align: center;
+    margin: 5px;
+}
+
+.align-center span {
+    padding: 5px;
+}
